--- a/slice/config.cfg
+++ b/slice/config.cfg
@@ -1,84 +1,15 @@
+Region: SR_noniso
+# SR_noniso or CR_noniso or CR_iso
 
-Isolation: FixedCutTight_Tight
-#FixedCutTight_Tight
-#FixedCutTightCaloOnly
-#FixedCutLoose
+Variable: DeltaPhiMetJet
 
-LoosePrime: 5
+# ---HISTOGRAMS---
+NBins: 150
+MinValue: 0.0
+MaxValue: 3.15
 
-MinCut: 2.45
-MediumCut: 4.45
-MaxCut: 29.45
-
-RfactorMC: 1.08
-RfactorData: 1.12
-
-EWK: false
-Inclusive: true
-TrackInversion: 1
-#true
-#false
-
-
-
-#[13; 15] for RfactorMC
-#[0; 13) && (16; +inf) for CentralValue
-PhTypeMin: 13
-PhTypeMax: 15
-
-
-#-----PRESECTIONS------#
-PhPt: 150
-NJet: 2
-NPh: 1
-Nmu: 0
-Ne: 0
-Zpointing: 250
-Weight: 100
-
-
-#-----INCLUSIVE SELECTIONS----#
-metTSTinc: 130
-metsingifinc: 11
-deltaPhiPhinc: 0.7
-deltaPhiJetinc: 0.4
-deltaPhiSubJetinc: 0.3
-
-
-#-----ELECTROWEAK SELECTIONS----#
-metTSTewk: 120
-metsingifewk: 12
-deltaPhiPhewk: 0.4
-deltaPhiJetewk: 0.3
-deltaPhiSubJetewk: 0.3
-SoftTerm: 16
-
-
-VetoJets: YES
-
-
-EtoGamA: 111
-EtoGamAerr: 2
-EtoGamB: 4.33
-EtoGamBerr: 0.07
-EtoGamC: 1.38
-EtoGamCerr: 0.02
-EtoGamD: 0.095
-EtoGamDerr: 0.002
-
-
-#EtoGamBE: 180
-#EtoGamBEerr: 3
-#EtoGamE: 1.052
-#EtoGamEerr: 0.014
-#EtoGamDF: 2.24
-#EtoGamDFerr: 0.03
-#EtoGamF: 0
-#EtoGamFerr: 0
-
-
-#---SIGMA----
-sigmaA: 6.0
-sigmaB: 1.9
-sigmaC: 0.6
-sigmaD: 0.08
+# ---SELECTIONS---
+MetTSTPt: 130
+MetTSTSignif: 8
+DeltaPhiMetJet: 0.4
+DeltaPhiMetPh: 0.7
