--- a/slice/config.cfg
+++ b/slice/config.cfg
@@ -1,5 +1,6 @@
 Region: SR_noniso
 # SR_noniso or CR_noniso or CR_iso
+# Non iso regions with inverted track isolation
 
 Variable: DeltaPhiMetJet
 
@@ -13,3 +14,11 @@ MetTSTPt: 130
 MetTSTSignif: 8
 DeltaPhiMetJet: 0.4
 DeltaPhiMetPh: 0.7
+
+
+# ---SLICES---
+SL1: 0.065
+SL2: 0.09
+SL3: 0.115
+SL4: 0.14
+SL5: 0.165
