--- a/slice/config.cfg
+++ b/slice/config.cfg
@@ -22,3 +22,10 @@ SL2: 0.09
 SL3: 0.115
 SL4: 0.14
 SL5: 0.165
+
+# ---Etogam---
+EtogamSL: 1.0
+EtogamSL1: 1.0
+EtogamSL2: 1.0
+EtogamSL3: 1.0
+EtogamSL4: 1.0
