--- a/slice/config.cfg
+++ b/slice/config.cfg
@@ -2,7 +2,7 @@ Region: SR_noniso
 # SR_noniso or CR_noniso or CR_iso
 # Non iso regions with inverted track isolation
 
-Variable: DeltaPhiMetJet
+Variable: DeltaPhiMetPh
 
 # ---HISTOGRAMS---
 NBins: 150
@@ -11,7 +11,7 @@ MaxValue: 3.15
 
 # ---SELECTIONS---
 MetTSTPt: 130
-MetTSTSignif: 8
+MetTSTSignif: 11
 DeltaPhiMetJet: 0.4
 DeltaPhiMetPh: 0.7
 
@@ -29,3 +29,19 @@ EtogamSL1: 11.946
 EtogamSL2: 14.198
 EtogamSL3: 0.0
 EtogamSL4: 0.0
+
+
+# ---T---
+T1: 1.0
+T2: 1.0
+T3: 1.0
+T4: 1.0
+
+T1err: 1.0
+T2err: 1.0
+T3err: 1.0
+T4err: 1.0
+
+
+# ---Extrapolation---
+Extrapolation: 0.001
